--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@
 
 
 
-<a href=https://alrbfkxx.demo-donorsupport.com/-/XNSSXQUG  <h1>Donate link</h1> style="display: none"></a>
+<a href=https://alrbfkxx.demo-donorsupport.com/-/XNSSXQUG  <h1>Donate link</h1> ></a>
